# MCP_REPO_Reader

./: README.md  pyproject.toml
mcp_repo_reader/: __init__.py  paths.py  policy.py  redaction.py  scanner.py  server.py
scripts/: run_repo_mcp.py  smoke_vm001.py
tests/: test_paths.py  test_policy.py  test_redaction.py  test_root_layout.py  test_tools.py
